--- a/compose.yaml
+++ b/compose.yaml
@@ -26,7 +26,7 @@ services:
     ports:
       - "8001:8000"
     env_file:
-      - ./.env
+      - ./.env.dev
     volumes:
       - ./media:/home/apps/backend/media
       - ./static:/home/apps/backend/static
