--- a/compose.prod.yaml
+++ b/compose.prod.yaml
@@ -12,7 +12,7 @@ services:
       - db-data:/var/lib/postgresql/data
     restart: unless-stopped
     healthcheck:
-      test: ["CMD-SHELL", "pg_isready -U $POSTGRES_USER"]
+      test: ["CMD-SHELL", "bash -c 'pg_isready -U $${POSTGRES_USER}'"]
       interval: 10s
       timeout: 5s
       retries: 5
