--- a/compose.yaml
+++ b/compose.yaml
@@ -10,7 +10,7 @@ services:
       - kaz-db-data:/var/lib/postgresql/data
     restart: always
     healthcheck:
-      test: ["CMD-SHELL", "pg_isready -U $POSTGRES_USER"]
+      test: ["CMD-SHELL", "bash -c 'pg_isready -U $${POSTGRES_USER}'"]
       interval: 10s
       timeout: 5s
       retries: 5
